--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,11 +1,12 @@
- <!-- Footer Section -->
- <footer class="footer #00bcd4-component">
-    <div class="footer-content">
-      <p>&copy; 2025 Your Name. All rights reserved.</p>
-      <div class="social-links">
-        <a href="#" target="_blank">LinkedIn</a>
-        <a href="#" target="_blank">GitHub</a>
-        <a href="#" target="_blank">Twitter</a>
-      </div>
+<footer>
+  <div class="footer-content">
+    <p>&copy; 2025 Davide Valenti. All rights reserved.</p>
+    <div class="social-links">
+      <a
+        href="https://www.linkedin.com/in/davide-valenti-95b7a1133/"
+        target="_blank"
+        >LinkedIn</a
+      >
     </div>
-  </footer>
+  </div>
+</footer>
